--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-collapsed": "^4.0.2",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "screenfull": "^6.0.2",
     "tailwindcss": "3.3.2",
     "xml2js": "^0.6.0"
   }
