--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-collapsed": "^4.0.2",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "screenfull": "^6.0.2",
-    "tailwindcss": "3.3.2",
-    "xml2js": "^0.6.0"
+    "tailwindcss": "3.3.2"
   }
 }
