--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-collapsed": "^4.0.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-loading": "^2.0.3",
     "react-player": "^2.12.0",
     "screenfull": "^6.0.2",
     "tailwindcss": "3.3.2"
