--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "lodash.debounce": "^4.0.8",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-collapsed": "^4.0.2",
@@ -23,5 +24,8 @@
     "react-player": "^2.12.0",
     "screenfull": "^6.0.2",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "daisyui": "^3.3.1"
   }
 }
